# EasyReflectometryApp

./: .buildinfo  .gitignore  .project.qmlproject  CHANGELOG.md  CNAME  CONTRIBUTING.md  DEPENDENCIES.md  EasyReflectometryApp.pyproject  EasyReflectometryApp.qmlproject  INSTALLATION.md  LICENSE.md  README.md  RELEASE.md  ROADMAP.md  adrs.html  build.html  building.html  ci.html  ciconfig.toml  contributing.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  utils.py
.doctrees/: adrs.doctree  build.doctree  building.doctree  ci.doctree  contributing.doctree  environment.pickle  index.doctree
Certificates/: snapCredentials.tar.enc
EasyReflectometryApp/: __init__.py  main.py  (+1 more)
src_qt6/: EasyReflectometryApp.pyproject  EasyReflectometryApp.qmlproject  pyproject.toml
src_qt6/EasyReflectometryApp/: main.py  main.qml
src_qt6/EasyReflectometryApp/Backend/Mock/: Backend.qml  Project.qml  qmldir
src_qt6/EasyReflectometryApp/Backend/Py/: __init__.py  backend.py  home.py  project.py  report.py  status.py
src_qt6/EasyReflectometryApp/Backend/Py/logic/: project.py
src_qt6/EasyReflectometryApp/Backends/: MockBackend.qml  PyBackend.py  qmldir
src_qt6/EasyReflectometryApp/Backends/Mock/: Analysis.qml  Backend.qml  Experiment.qml  Helpers.qml  Plotting.qml  Project.qml  Report.qml  Sample.qml  Status.qml  Summary.qml  qmldir
src_qt6/EasyReflectometryApp/Backends/Py/: README.md  analysis.py  backend.py  experiment.py  helpers.py  home.py  plotting_1d.py  project.py  py_backend.py  report.py  sample.py  status.py  summary.py
src_qt6/EasyReflectometryApp/Backends/Py/logic/: assemblies.py  calculators.py  experiments.py  fitting.py  helpers.py  layers.py  material.py  minimizers.py  models.py  parameters.py  project.py  sample.py  status.py  summary.py
src_qt6/EasyReflectometryApp/Gui/: ApplicationWindow.qml  StatusBar.qml
src_qt6/EasyReflectometryApp/Gui/Components/All_Copied_to_be_deleted/: AnalysisConstraints.qml  AnalysisFitables.qml  BasePlot.qml  ExperimentBackgroundSetup.qml  ExperimentResolutionSetup.qml  SampleChart.qml  UserTutorialsController.qml
src_qt6/EasyReflectometryApp/Gui/Globals/: ApplicationInfo.qml  Backend.qml  BackendProxy.qml  BackendWrapper.qml  References.qml  Variables.qml  qmldir
src_qt6/EasyReflectometryApp/Gui/Pages/Analysis/: Layout.qml  SideBarAdvanced.qml  SideBarBasic.qml  SideBarText.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Analysis/MainContent/: AnalysisView.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Analysis/SideBarAdvanced/: Calculator.qml  Minimizer.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Analysis/SideBarBasic/: Fittables.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Analysis/Sidebar/Advanced/: Layout.qml  ParamNames.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Analysis/Sidebar/Advanced/Groups/: Calculator.qml  Minimizer.qml  ParamNames.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Analysis/Sidebar/Basic/: Experiments.qml  FitStatusDialog.qml  Fitting.qml  Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Analysis/Sidebar/Basic/Groups/: Experiments.qml  Fittables.qml  Fitting.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Analysis/Sidebar/Basic/Popups/: FitStatusDialog.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Experiment/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Experiment/MainContent/: ExperimentView.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Experiment/Sidebar/Basic/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Experiment/Sidebar/Basic/Groups/: ExperimentalData.qml  InstrumentParameters.qml  QRange.qml  SimulationRange.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Home/: Content.qml  Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Home/Popups/: About.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Project/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Project/MainArea/: Description.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Project/Sidebar/Basic/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Project/Sidebar/Basic/Groups/: Examples.qml  GetStarted.qml  Recent.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Project/Sidebar/Basic/Popups/: OpenCifFile.qml  OpenJsonFile.qml  ProjectDescription.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Project/Sidebar/Extra/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Project/Sidebar/Extra/Groups/: Scrolling.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Project/Sidebar/Text/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Report/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Report/MainArea/: Summary.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Report/Sidebar/Basic/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Report/Sidebar/Basic/Groups/: Export.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Sample/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Sample/MainContent/: ModelView.qml  ModelView2.qml  SampleView.qml  SldView.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Sample/Sidebar/Advanced/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Sample/Sidebar/Advanced/Groups/: Constraints.qml  QRange.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Sample/Sidebar/Basic/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Sample/Sidebar/Basic/Groups/: AssemblyEditor.qml  MaterialEditor.qml  Materials.qml  ModelEditor.qml  ModelSelector.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Sample/Sidebar/Basic/Groups/Assemblies/: MultiLayer.qml  RepeatingMultiLayer.qml  SurfactantLayer.qml  qmldir
src_qt6/EasyReflectometryApp/Gui/Pages/Summary/: Layout.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Summary/Sidebar/Basic/Groups/: Export.qml
src_qt6/EasyReflectometryApp/Gui/Pages/Summary/Sidebar/Extra/Groups/: Empty.qml
src_qt6/EasyReflectometryApp/Gui/Resources/Logos/: App.icns
src_qt6/EasyReflectometryApp/Gui/Utils_to_be_deleted/: PyQmlProxy.js  qmldir
src_qt6/EasyReflectometryApp/Logic/Mock/: Application.qml  BackendProxy.qml  Home.qml  Project.qml  Report.qml  Status.qml  qmldir
src_qt6/EasyReflectometryApp/Logic/Py/: backend_proxy.py  home.py  project.py  report.py  status.py
(+412 files in other folders)
