[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'EasyReflectometryApp'
version = '1.0.0'
description = "Making reflectometry data analysis and modelling easy."
authors = [
    {name = "Andrew R. McCluskey", email = "andrew.mccluskey@ess.eu"}, 
    {name = "Andrew Sazonov"}, 
    {name = "Simon Ward"},
    {name = "Andreas Pedersen", email = "andreas.pedersen@ess.eu"}
]
maintainers = [
    {name = "Andrew R. McCluskey", email = "andrew.mccluskey@ess.eu"},
    {name = "Andreas Pedersen", email = "andreas.pedersen@ess.eu"}
]
license = {file = 'LICENSE'}
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX :: Linux'
]

requires-python = '>=3.10'
dependencies = [
  'PySide6>=6.6,<6.8',
  'EasyApp @ git+https://github.com/EasyScience/EasyApp.git@examples',
]

[project.urls]
homepage = 'https://easyreflectometry.org'
documentation = 'https://easyreflectometry.org'
changelog = 'https://github.com/easyScience/EasyReflectometryApp/blob/main/CHANGELOG.md'

[tool.hatch.build.targets.wheel]
packages = ['src/EasyReflectometryApp']

# To allow dependencies residing in git 
[tool.hatch.metadata]
allow-direct-references = true